<resources>
    <style name="ActionButtonStyle">
        <item name="android:minWidth">0dip</item>
        <item name="android:paddingLeft">0dip</item>
        <item name="android:paddingRight">0dip</item>
    </style>
    <string name="app_name">MyNotes</string>

    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="newnote">New</string>
    <string name="load">Load</string>
    <string name="help">Help</string>
    <string name="about">About</string>
</resources>
